fix the cursor problem at the source; the a.navLink elements were being covered by the h2's, so I make the .navGridCell elements navlinks :)

--- a/wp-content/themes/verdemag/css/main.css
+++ b/wp-content/themes/verdemag/css/main.css
@@ -165,6 +165,10 @@ a {
 	text-decoration: none;
 }
 
+.navLink {
+	cursor: pointer;
+}
+
 header nav {
 	display: block;
 	position: relative;
@@ -384,7 +388,6 @@ input.wepay-widget-input {
   background-color: white;
   color: white;
   font-size: 20px;
-	cursor: pointer;
 }
 
 .navGridCell img {
